styles/style.css
html {
  /*scroll-behavior: smooth;*/
  overflow-x: hidden;
}

body {
  background: #2c3e50;
  color: rgba(255,255,255,0.5);
  font-family: 'Roboto', sans-serif;
  font-size: 1.25rem;
  font-weight: 300;
  overflow-x: hidden;
}

p b {
  color: rgba(255,255,255,0.65);
}

#intro {
  min-height: 100vh;
}

#collaborations a {
  display: block;
  text-align: center;
  width: 100%;
  margin: 50px 0;
}
#collaborations img {
  max-width: 100%;
  max-height: 60px;
  filter: grayscale(1);
}
#collaborations img.square-logo {
  max-height: 90px;
}

section {
  padding-top: 140px;
  padding-bottom: 140px;
}

h1 {
  color: rgba(255,255,255,0.9);
  margin-bottom: 0;
  line-height: 4rem;
  font-size: 4.5rem;
}

h2 {
  color: rgba(255,255,255,0.8);
  /*text-transform: uppercase;*/
  position: relative;
}
h2:before {
  content: "";
  position: absolute;
  left: -15px;
  top: 0;
  height: 100%;
  width: 3px;
  background: #1abc9c;
}

h3 {
  font-size: 2rem;
}

h4 {
  font-size: 1.5rem;
  font-weight: 300;
  color: #ccc;
}
h4 span {
  display: block;
  opacity: 0.5;
  font-weight: 500;
}

a {
  /*color: #9b59b6;*/
  color: #1abc9c;
  transition: all 0.3s;
}

a.outlined {
  border-radius: 5px;
  border: 1px solid;
  padding: 6px 15px;
}

a:hover, a:focus {
  color: #DEDEDE;
  text-decoration: none;
}

header {
  position: fixed;
  top: 0;
  left: 0;
  padding: 15px 0;
  width: 100%;
  z-index: 99;
  background: rgba(44, 62, 80,0.95);
}

header nav {
  font-size: 0.75rem;
  float: right;
  text-transform: uppercase;
  letter-spacing: 1px;
}

header nav ul {
  margin-bottom: 0;
}

header nav ul li:not(:last-child) {
  margin-right: 1.75rem !important;
}

#intro {
  display: flex;
  align-items: center;
}

.intro-text {
  margin: 2rem 0;
  max-width: 600px;
}

.projects-group {
  margin: 70px 0;
}
.projects-group h4 {
  margin-bottom: 18px;
}
.projects-group ul {
  margin-bottom: 0;
}
.projects-group li {
  background: rgba(26, 188, 156, 0.2);
  padding: 4px 10px;
  border-radius: 4px;
  margin-bottom: 8px;
}
#projects .projects-group:last-child {
  margin-bottom: 1rem;
}
#projects img {
  width: 900px;
  height: auto;
}
.project p {
  font-size: 1rem;
}

.img-wrapper {
  padding-top: 30px;
}
.img-wrapper img {
  border-radius: 8px;
  box-shadow: 0 0 0 10px rgba(255,255,255,0.1);
}

.img-wrapper .caption {
  padding-left: 10px;
}

.content-center {
  display: flex;
  align-items: center;
}

p.caption {
  font-size: 0.9rem;
  margin: 15px 0 5px;
}

ul.text-small {
  font-size: 0.8rem;
  letter-spacing: 1px;
}
ul.text-small a {
  font-size: 1rem;
}
ul.text-small li {
  margin-right: 1.25rem !important;
}

footer {
  padding: 40px 0;
}
footer p:first-child {
  color: #fff;
}

@media (min-width: 768px) {
  .dark-bg.project {
    background: rgba(0,0,0,0.88);
    padding: 15px;
    border-radius: 10px;
    box-shadow: 0 0 0 10px rgba(0,0,0,0.3);
  }
}

@media (max-width: 767px) {
  header nav {
    float: left;
    letter-spacing: 0.2px;
  }
  .projects-group .row .col-md-5:nth-child(2) .project {
    margin-top: 70px;
  }
  header nav ul li:not(:last-child) {
    margin-right: 0.8rem !important;
    padding-bottom: 1rem;
  }
  footer p.caption {
    font-size: 0.7rem;
  }
  #projects img {
    width: 124%;
  }
  .row.mobile-reverse {
    display: flex;
    flex-direction: column-reverse;
  }
  .img-wrapper.text-right {
    text-align: left !important;
  }
}

